--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
     },
     "private": true,
     "dependencies": {
-        "@fluentui/react": "^8.99.2",
+        "@fluentui/react": "^8.106.1",
         "@fluentui/react-charting": "^5.14.10",
-        "@fluentui/react-components": "^9.7.1",
+        "@fluentui/react-components": "^9.15.6",
         "@fluentui/react-icons": "^2.0.186",
         "@fluentui/react-northstar": "0.62.0",
         "@fluentui/react-theme": "^9.1.3",
         "@microsoft/microsoft-graph-client": "^3.0.1",
         "@microsoft/teams-js": "^2.7.1",
         "@microsoft/teamsfx": "^2.0.1",
-        "@microsoft/teamsfx-react": "file:c:/Project/microsoft-teamsfx-react-2.1.1.tgz",
+        "@microsoft/teamsfx-react": "./src/microsoft-teamsfx-react-2.1.1.tgz",
         "@react-hook/resize-observer": "^1.2.6",
         "axios": "^0.21.1",
         "msteams-react-base-component": "^4.0.1",
