--- a/env/.env.local
+++ b/env/.env.local
@@ -6,6 +6,8 @@ TEAMSFX_ENV=local
 TAB_DOMAIN=
 TAB_ENDPOINT=
 TEAMS_APP_ID=
+TEAMS_APP_TENANT_ID=
+TEAMS_APP_UPDATE_TIME=
 TEAMS_APP_PACKAGE_PATH=
 
 # Generated during deploy, you can also add your own variables.
