chore: update .env.dev

--- a/env/.env.dev
+++ b/env/.env.dev
@@ -7,8 +7,11 @@ AZURE_RESOURCE_GROUP_NAME=
 RESOURCE_SUFFIX=
 
 # Generated during provision, you can also add your own variables.
-TEAMS_APP_ID=
 TAB_AZURE_STORAGE_RESOURCE_ID=
+TAB_DOMAIN=
 TAB_ENDPOINT=
+TEAMS_APP_ID=
+TEAMS_APP_TENANT_ID=
+TEAMS_APP_UPDATE_TIME=
 
 # Secrets. You can add your own secret value, prefixed with SECRET_
